@@ -57,10 +57,19 @@ namespace io { // geos.io
 #include <geos/io/WKTWriter.h>
 //#include <geos/io/Writer.h>
 
+#ifdef __GNUC__
+#warning *** FIXME: to be removed, temporarly set to allow a quick successful build
+#endif
+
+using namespace geos::io;
+
 #endif
 
 /**********************************************************************
  * $Log$
+ * Revision 1.29  2006/07/21 16:45:28  mloskot
+ * Wrapped FIXME message with #warning directive to shout about potential headers removal in future.
+ *
  * Revision 1.28  2006/06/01 11:49:36  strk
  * Reduced installed headers form geomgraph namespace
  *
